disable package loading messages

--- a/session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.qmd
+++ b/session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.qmd
@@ -80,6 +80,9 @@ We'll need three libraries for this session:
 
 
 ```{r load-libraries}
+#| message: false
+#| warning: false
+
 library(dplyr)
 library(deSolve)
 library(ggplot2)
