--- a/session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.qmd
+++ b/session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.qmd
@@ -250,7 +250,7 @@ Define incidence and prevalence, and discuss the differences between them.
 ## Post-process the model output to predict standard epidemiological metrics
 
 This is great, but as we've seen before, the output from `ode` can be a bit unwieldy. Let's write a function that can clean it up for us.
-<!-- fixme: prevalence is typically reported as number of cases per 100,000 population. Needs to be discussion about whether to incidence should be those entering exposed or infectious. -->
+<!-- fixme: prevalence is typically reported as number of cases per 100,000 population. Needs to be discussion about whether to incidence should be those entering exposed or infectious. NB any updates should be made to module 5 too. -->
 
 ```{r clean-ode-function}
 tidy_base_model <- function(ode_output, times, parameters) {
